# algorithm-and-data-structures

02-essentialConcepts/: CMakeLists.txt  arrayAsParameter.cpp  class.cpp  functions.cpp  main.cpp  modularProgram.cpp  parameterPassing.cpp  pointerToStructure.cpp  pointers.cpp  reference.cpp  structure.cpp  structureAsParameter.cpp  template.cpp
05_recursion/: CMakeLists.txt  factorialUsingRecursion.cpp  fibonacci.cpp  indirectRecursion.cpp  nCrUsingRecursion.cpp  nestedRecursion.cpp  powerRecursion.cpp  recursion.cpp  staticGlobalRecursion.cpp  sumofNrecursion.cpp  taylorSeries.cpp  towerOfHanoi.cpp  treeRecursion.cpp
06_arrays/: 2dArray.cpp  increasingArraySize.cpp  staticDynamicArray.cpp
07_arrayADT/: CMakeLists.txt  arrayADT.cpp  arrayClass.cpp  arrayClassAll.cpp  arrayReverse.cpp  binarySearch.cpp  checkSortedArray.cpp  deleteArray.cpp  findMissingElements.cpp  findPairElement.cpp  findingDuplicatesElements.cpp  findingMultipleElements.cpp  getSetMaxOnArray.cpp  insertArray.cpp  linearSearch.cpp  main.cpp  maxMinSingleScan.cpp  menuDriverProgram.cpp  mergeArray.cpp  setOperationsOnArray.cpp
08_Strings/: CMakeLists.txt  anagramCheck.cpp  changingCaseString.cpp  comparingStringAndPalindrome.cpp  countingWords.cpp  findDuplicateString.cpp  permutationString.cpp  reverseString.cpp  stringLength.cpp  validateString.cpp
09_matrices/: CMakeLists.txt  (+4 more)
20_sortingTechniquee/: CMakeLists.txt  bubbleSort.cpp  countSort.cpp  insertionSort.cpp  iterativeMergeSort.cpp  quickSort.cpp  radixShort.cpp  recursiveMergeSort.cpp  selectionSort.cpp  shellSort.cpp
(+58 files in other folders)
