cmake_minimum_required(VERSION 3.25)
project(20_sortingTechniquee)

set(CMAKE_CXX_STANDARD 23)

add_executable(20_sortingTechniquee insertionSort.cpp)
#add_executable(20_sortingTechniquee  selectionSort.cpp quickSort.cpp iterativeMergeSort.cpp recursiveMergeSort.cpp countSort.cpp binBucket.cpp radixShort.cpp shellSort.cpp)
